--- a/style.css
+++ b/style.css
@@ -7,3 +7,12 @@ body{
 .name-highlight{
     color: brown;
 }
+.half-width{
+    width: 40%;
+    float: left;
+    margin: 5%;
+    padding: 2%;
+}
+.half-width image{
+    width: 100%;
+}
