--- a/style.css
+++ b/style.css
@@ -14,5 +14,15 @@ body{
     padding: 2%;
 }
 .half-width image{
-    width: 100%;
+    width: 90%;
+}
+.button{
+    text-decoration: none;
+    color: aliceblue;
+    background-image:linear-gradient(30deg, lightsalmon,tomato) ;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 700px;
+
+
 }
