--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
 body{
     font-family: 'Crimson Text', serif;
 }
@@ -22,6 +25,9 @@ body{
     background-image:linear-gradient(30deg, lightsalmon,tomato) ;
     padding: 10px 20px;
     border-radius: 5px;
-
+}
+section{
+    height: 500px;
+    padding: 100px;
 
 }
