--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ body{
 }
 .second-half-width{
 
- margin-top: 200px; 
- margin-left: 200px;  
+ margin-top: 25%; 
+ margin-left: 20%;  
 }
 
 .button{
