--- a/style.css
+++ b/style.css
@@ -1,16 +1,29 @@
-h1{
-    font-size: 50px;
-}
-h2{
-    font-size: 40px;
+body{
+    font-family: 'Crimson Text', sans-serif;
+    margin: 0;
 }
 .top-banner{
     background-repeat: no-repeat;
     max-width: none;
 }
-body{
-    font-family: 'Crimson Text', serif;
+
+.section-box{
+    display: flex;
+    margin-bottom: 100px;
 }
+
+h1{
+    font-size: 50px;
+}
+h2{
+    font-size: 40px;
+    color: gray;
+}
+p{
+    text-align: justify;
+}
+
+
 .name-highlight{
     color: brown;
 }
@@ -28,11 +41,43 @@ body{
     text-decoration: none;
     color: aliceblue;
     background-image:linear-gradient(30deg, lightsalmon,tomato) ;
-    padding: 10px 20px;
-    border-radius: 5px;
+    padding: 10px 30px;
+    border-radius: 10px;
+    font-weight: 400;
 }
-section{
-    height: 500px;
-    padding: 100px;
+.dream-padding{
+    padding-right: 120px
+}
+.padding-left{
+    margin-left: 30px
+}
+.text-right{
+    text-align: center;
+}
 
+.exprience-area{
+    background-repeat: no-repeat;
+    background-position: left;
 }
+.shadow{
+    box-shadow: 5px 7px 50px gray;
+    height: 80%;
+}
+
+#full-stack{
+    border-left: 7px solid tomato;
+}
+
+#baby-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue,cyan);
+    border-image-slice: 1;
+}
+
+.padding-r{
+    padding-right: 20px;
+}
+footer p{
+    text-align: center;
+}
+
