--- a/style.css
+++ b/style.css
@@ -6,10 +6,13 @@ body{
     background-repeat: no-repeat;
     max-width: none;
 }
-
+section{
+    width: 100%;
+}
 .section-box{
     display: flex;
     margin-bottom: 100px;
+    width: 100%;
 }
 
 h1{
