--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ p{
     font-weight: 400;
 }
 .dream-padding{
-    padding-right: 120px
+    padding-right: 150px;
+    padding-top: 100px;
 }
 .padding-left{
     margin-left: 30px
